--- a/Playlist_Merge.ipynb
+++ b/Playlist_Merge.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import spotipy\n",
@@ -18,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "target_user = 'spotify:user:uEyhGK-MTGSp5oOfA_J6Jg'\n",
@@ -30,9 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import spotipy.util as util"
@@ -41,9 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from config import token\n",
@@ -54,15 +46,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "retrying ...1secs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NOTE: THIS CELL TAKES A FEW MINUTES TO EXECUTE\n",
     "\n",
@@ -88,7 +72,7 @@
     {
      "data": {
       "text/plain": [
-       "1450"
+       "1427"
       ]
      },
      "execution_count": 6,
@@ -103,9 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plist_fcount_list = []\n",
@@ -145,47 +127,47 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>followers</th>\n",
        "      <th>id</th>\n",
+       "      <th>followers</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>26075585</td>\n",
        "      <td>37i9dQZF1DXcBWIGoYBM5M</td>\n",
+       "      <td>26868061</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>634</th>\n",
-       "      <td>15125464</td>\n",
+       "      <th>629</th>\n",
        "      <td>37i9dQZEVXbMDoHDwVN2tF</td>\n",
+       "      <td>15657122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>12740687</td>\n",
        "      <td>37i9dQZF1DX0XUsuxWHRQd</td>\n",
+       "      <td>13412629</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>10591072</td>\n",
        "      <td>37i9dQZF1DX10zKzsJ2jva</td>\n",
+       "      <td>10686735</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>815</th>\n",
-       "      <td>9269965</td>\n",
+       "      <th>805</th>\n",
        "      <td>37i9dQZF1DWWMOmoXKqHTD</td>\n",
+       "      <td>9722759</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     followers                      id\n",
-       "0     26075585  37i9dQZF1DXcBWIGoYBM5M\n",
-       "634   15125464  37i9dQZEVXbMDoHDwVN2tF\n",
-       "1     12740687  37i9dQZF1DX0XUsuxWHRQd\n",
-       "3     10591072  37i9dQZF1DX10zKzsJ2jva\n",
-       "815    9269965  37i9dQZF1DWWMOmoXKqHTD"
+       "                         id  followers\n",
+       "0    37i9dQZF1DXcBWIGoYBM5M   26868061\n",
+       "629  37i9dQZEVXbMDoHDwVN2tF   15657122\n",
+       "1    37i9dQZF1DX0XUsuxWHRQd   13412629\n",
+       "3    37i9dQZF1DX10zKzsJ2jva   10686735\n",
+       "805  37i9dQZF1DWWMOmoXKqHTD    9722759"
       ]
      },
      "metadata": {},
@@ -309,8 +291,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>followers</th>\n",
        "      <th>id</th>\n",
+       "      <th>followers</th>\n",
        "      <th>Unnamed: 0</th>\n",
        "      <th>name</th>\n",
        "    </tr>\n",
@@ -318,37 +300,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>26075585</td>\n",
        "      <td>37i9dQZF1DXcBWIGoYBM5M</td>\n",
+       "      <td>26868061</td>\n",
        "      <td>0</td>\n",
        "      <td>Today's Top Hits</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>15125464</td>\n",
        "      <td>37i9dQZEVXbMDoHDwVN2tF</td>\n",
-       "      <td>634</td>\n",
+       "      <td>15657122</td>\n",
+       "      <td>629</td>\n",
        "      <td>Global Top 50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>12740687</td>\n",
        "      <td>37i9dQZF1DX0XUsuxWHRQd</td>\n",
+       "      <td>13412629</td>\n",
        "      <td>1</td>\n",
        "      <td>RapCaviar</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>10591072</td>\n",
        "      <td>37i9dQZF1DX10zKzsJ2jva</td>\n",
+       "      <td>10686735</td>\n",
        "      <td>3</td>\n",
        "      <td>¡Viva Latino!</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>9269965</td>\n",
        "      <td>37i9dQZF1DWWMOmoXKqHTD</td>\n",
-       "      <td>815</td>\n",
+       "      <td>9722759</td>\n",
+       "      <td>805</td>\n",
        "      <td>Songs to Sing in the Car</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -356,12 +338,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   followers                      id  Unnamed: 0                      name\n",
-       "0   26075585  37i9dQZF1DXcBWIGoYBM5M           0          Today's Top Hits\n",
-       "1   15125464  37i9dQZEVXbMDoHDwVN2tF         634             Global Top 50\n",
-       "2   12740687  37i9dQZF1DX0XUsuxWHRQd           1                 RapCaviar\n",
-       "3   10591072  37i9dQZF1DX10zKzsJ2jva           3             ¡Viva Latino!\n",
-       "4    9269965  37i9dQZF1DWWMOmoXKqHTD         815  Songs to Sing in the Car"
+       "                       id  followers  Unnamed: 0                      name\n",
+       "0  37i9dQZF1DXcBWIGoYBM5M   26868061           0          Today's Top Hits\n",
+       "1  37i9dQZEVXbMDoHDwVN2tF   15657122         629             Global Top 50\n",
+       "2  37i9dQZF1DX0XUsuxWHRQd   13412629           1                 RapCaviar\n",
+       "3  37i9dQZF1DX10zKzsJ2jva   10686735           3             ¡Viva Latino!\n",
+       "4  37i9dQZF1DWWMOmoXKqHTD    9722759         805  Songs to Sing in the Car"
       ]
      },
      "metadata": {},
@@ -377,9 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "export_csv = top_100_plists.to_csv(r'top_100_playlists.csv')"
@@ -402,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
